--- a/v3/runjava.rc
+++ b/v3/runjava.rc
@@ -1,5 +1,6 @@
 #!/bin/bash
 scriptpath=$(dirname "$0")
 
+rm -f $scriptpath/src/*.class
 javac $scriptpath/src/*.java
 java -cp "$scriptpath/src" $1
